repos/makepy/contents/test/fail/BadSpace2.rules
y = 1 2 3

for x iny:
    do:
        print( y )

all:
